--- a/LoginDemo/src/main/res/layout/toast_wechat.xml
+++ b/LoginDemo/src/main/res/layout/toast_wechat.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/custom_toast_layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/black"
-    android:orientation="horizontal">
+    android:layout_width="200dp"
+    android:layout_height="200dp"
+    android:background="@drawable/bg_toast"
+    android:orientation="vertical">
 
-    <ImageView
+    <ProgressBar
         android:id="@+id/custom_toast_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Hello world"
-        android:src="@drawable/setting" />
+        android:layout_width="80dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:paddingTop="20dp"
+        android:layout_weight="1"
+        android:indeterminateTint="@color/white"
+        android:contentDescription="Hello world" />
 
     <TextView
         android:id="@+id/custom_toast_message"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:contentDescription="To"
-        android:gravity="center|center_vertical"
+        android:gravity="center"
         android:text="Custom Toast"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textSize="30dp" />
 </LinearLayout>
