--- a/LoginDemo/src/main/res/layout/activity_setting.xml
+++ b/LoginDemo/src/main/res/layout/activity_setting.xml
@@ -16,6 +16,7 @@
         android:theme="@style/actionBarTheme">
 
         <ImageView
+            android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/back" />
