--- a/LoginDemo/src/main/res/values-night/themes.xml
+++ b/LoginDemo/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Wechat" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Wechat" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">#424040</item>
@@ -33,7 +33,7 @@
         <item name="colorOnPrimary">@color/black</item>
     </style>
 
-    <style name="BottomNavigationTheme" parent="Theme.AppCompat">
+    <style name="BottomNavigationTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="colorPrimary">@color/wechat_green</item>
         <item name="android:textColorSecondary">@color/black</item>
     </style>
